--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/material": "^5.14.10",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "iron-session": "^6.3.1",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "swr": "^2.2.2"
   }
 }
