--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.14.10",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "feather-icons-react": "^0.6.2",
     "iron-session": "^6.3.1",
     "next": "13.4.19",
     "react": "18.2.0",
