--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
+    "axios": "^1.5.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "feather-icons-react": "^0.6.2",
