--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.4.19",
     "feather-icons-react": "^0.6.2",
     "iron-session": "^6.3.1",
+    "moment": "^2.29.4",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
