--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@feathersjs/client": "^5.0.11",
+    "@feathersjs/socketio-client": "^5.0.11",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
     "axios": "^1.5.1",
